--- a/TCP_Server/TCP_Server/TCP_Server/TCP_Server.csproj
+++ b/TCP_Server/TCP_Server/TCP_Server/TCP_Server.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -75,6 +76,18 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Information.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\서버열기.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\transmission.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\파일 전송.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
